Fix color of gap between main and footer

--- a/_scss/custom.scss
+++ b/_scss/custom.scss
@@ -11,6 +11,7 @@
 
 .site-main {
   @extend .flex-shrink-0;
+  flex-grow: 1;
 }
 
 .site-body {
